--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Desafio/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>CUPPON</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-success navbar-dark " data-bs-theme="light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img class="cuppon" src="../Desafio/assets/img/logo-white.png" alt="logo blanco">
+            <img class="cuppon" src="./assets/img/logo-white.png" alt="logo blanco">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
         <section class="row">
             <article class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4 d-flex justify-content-center align-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="../Desafio/assets/img/cupon-1.jpg" class="card-img-top" alt="cama">
+                    <img src="./assets/img/cupon-1.jpg" class="card-img-top" alt="cama">
                     <div class="card-body">
                       <h5 class="card-title">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
                       <h6>Plumones Manolino</h6>
@@ -54,7 +54,7 @@
 
             <article class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4 d-flex justify-content-center align-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="../Desafio/assets/img/cupon-2.jpg" class="card-img-top" alt="entrada">
+                    <img src="./assets/img/cupon-2.jpg" class="card-img-top" alt="entrada">
                     <div class="card-body">
                       <h5 class="card-title">Entrada para compartir + platos de fondo + postres + bebestibles</h5>
                       <h6>V for Vegan</h6>
@@ -69,7 +69,7 @@
 
             <article class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4 d-flex justify-content-center align-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="../Desafio/assets/img/cupon-3.jpg" class="card-img-top" alt="dental">
+                    <img src="./assets/img/cupon-3.jpg" class="card-img-top" alt="dental">
                     <div class="card-body">
                       <h5 class="card-title">Evaluación integral + blanqueamiento dental led + limpieza + fluoración</h5>
                       <h6>Clínica Dental Quijada </h6>
@@ -83,7 +83,7 @@
 
             <article class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4 d-flex justify-content-center align-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="../Desafio/assets/img/cupon-4.jpg" class="card-img-top" alt="colacion">
+                    <img src="./assets/img/cupon-4.jpg" class="card-img-top" alt="colacion">
                     <div class="card-body">
                       <h5 class="card-title">Colación para 2 personas + postre (no incluye bebidas)</h5>
                       <h6>Suricata almacen</h6>
@@ -98,7 +98,7 @@
 
             <article class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4 d-flex justify-content-center align-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="../Desafio/assets/img/cupon-5.jpg" class="card-img-top" alt="stukids">
+                    <img src="./assets/img/cupon-5.jpg" class="card-img-top" alt="stukids">
                     <div class="card-body">
                       <h5 class="card-title">1, 2 o 4 tickets para Stukids. Elige sucursal</h5>
                       <h6>Stukids Centro de Eventos</h6>
@@ -113,7 +113,7 @@
 
             <article class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4 d-flex justify-content-center align-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="../Desafio/assets/img/cupon-6.jpeg" class="card-img-top" alt="viaje">
+                    <img src="./assets/img/cupon-6.jpeg" class="card-img-top" alt="viaje">
                     <div class="card-body">
                       <h5 class="card-title">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</h5>
                       <h6>D-Latam Travel</h6>
@@ -150,7 +150,7 @@
 
 
     <footer class="text-center">
-        <img class="cuppon" src="../Desafio/assets/img/logo-black.png" alt="logo negro">
+        <img class="cuppon" src="./assets/img/logo-black.png" alt="logo negro">
         <p>© 2018 Cuppon Latam. Todos los derechos reservados.</p>
         
     </footer>
